--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  carousel_slider: ^4.2.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -48,8 +47,7 @@ dependencies:
   file_picker: ^8.0.6
   image_cropper: ^7.1.0
   image_picker: ^1.1.2
-
-  # jwt_decoder: ^2.0.1
+  carousel_slider: ^5.0.0  # jwt_decoder: ^2.0.1
 
 dev_dependencies:
   flutter_test:
