--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,7 +48,7 @@ dependencies:
   image_cropper: ^7.1.0
   image_picker: ^1.1.2
   carousel_slider: ^5.0.0  # jwt_decoder: ^2.0.1
-
+  google_maps_flutter: ^2.9.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
