--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   image_picker: ^1.1.2
   carousel_slider: ^5.0.0
   google_maps_flutter: ^2.9.0
+  shared_preferences: ^2.3.2
 
 dev_dependencies:
   flutter_test:
