--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,7 @@ dependencies:
   carousel_slider: ^5.0.0
   google_maps_flutter: ^2.9.0
   shared_preferences: ^2.3.2
-
+  http: ^1.2.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
